new change for rentHub

--- a/src/app/components/add-apartment/add-apartment.component.html
+++ b/src/app/components/add-apartment/add-apartment.component.html
@@ -34,9 +34,9 @@
               aria-label="Default select example"
             >
               <option value="selectOption" selected>Select an option</option>
-              <option value="apartment1">CBR Estates</option>
-              <option value="apartment2">Gokul Nilayam</option>
-              <option value="apartment3">Srinivas Aprtments</option>
+              <option value="cbr">CBR Estates</option>
+              <option value="gokul">Gokul Nilayam</option>
+              <option value="srinivas">Srinivas Aprtments</option>
             </select>
           </div>
         </div>
@@ -371,9 +371,9 @@
                     <option value="selectOption" selected>
                       Select an option
                     </option>
-                    <option value="apartment1">CBR Estates</option>
-                    <option value="apartment2">Gokul Nilayam</option>
-                    <option value="apartment3">Srinivas Aprtments</option>
+                    <option value="cbr">CBR Estates</option>
+                    <option value="gokul">Gokul Nilayam</option>
+                    <option value="srinivas">Srinivas Aprtments</option>
                   </select>
                 </div>
               </div>
