--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,34 +1,15 @@
 <div>
-  <nav
-    class="navbar bg-dark navbar-expand-lg bg-body-tertiary"
-    data-bs-theme="dark"
-  >
+  <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand">RentHub</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarText"
-        aria-controls="navbarText"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div
-        class="collapse navbar-collapse d-flex justify-content-between"
-        id="navbarText"
-      >
+      <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarText">
         <div class="search-hero w-50 pl-10">
-          <input
-            class="bi bi-search form-control textcolor search-input"
-            type="text"
-            name="search"
-            [(ngModel)]="searchText"
-            autocomplete="off"
-            placeholder="Search By Apartment Name"
-          />
+          <input class="bi bi-search form-control textcolor search-input" type="text" name="search"
+            [(ngModel)]="searchText" autocomplete="off" placeholder="Search By Apartment Name" />
         </div>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"></li>
@@ -37,14 +18,8 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item ml-4">
               <div class="form-check nav-link">
-                <input
-                  class="form-check-input"
-                  [(ngModel)]="isfavoriteChecked"
-                  (change)="applyFvorites()"
-                  type="checkbox"
-                  value="true"
-                  id="favorite"
-                />
+                <input class="form-check-input" [(ngModel)]="isfavoriteChecked" (change)="applyFvorites()"
+                  type="checkbox" value="true" id="favorite" />
                 <label class="form-check-label" for="favorite">
                   My Favorites
                 </label>
@@ -72,18 +47,10 @@
       <div class="row">
         <h4>Filter</h4>
         <label for="customRange3" class="form-label">Price Range</label>
-        <ngx-slider
-          [(value)]="minValue"
-          [(highValue)]="maxValue"
-          [options]="options"
-        ></ngx-slider>
+        <ngx-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="options"></ngx-slider>
         <div class="form-group">
           <label class="control-label" for="location">Location</label>
-          <select
-            class="form-select"
-            [(ngModel)]="filterLocation"
-            aria-label="Default select example"
-          >
+          <select class="form-select" [(ngModel)]="filterLocation" aria-label="Default select example">
             <option value="ALL">All</option>
             <option value="HYD">Hyderabad</option>
             <option value="CHNI">Chennai</option>
@@ -95,10 +62,7 @@
       <div class="row">
         <div class="col-5"></div>
         <div class="col-7">
-          <button
-            class="btn btn-secondary mt-3 ml-4 mr-20"
-            (click)="clearFilter()"
-          >
+          <button class="btn btn-secondary mt-3 ml-4 mr-20" (click)="clearFilter()">
             Clear
           </button>
           <button class="btn btn-info mt-3" (click)="applyFilter()">
@@ -108,49 +72,23 @@
       </div>
       <div class="row mt-4">
         <h5>Featured Listings</h5>
-        <div
-          id="carouselExample"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
+        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img
-                src="../../assets/img6.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
+              <img src="../../assets/img6.jpg" class="d-block w-100" alt="..." />
             </div>
             <div class="carousel-item">
-              <img
-                src="../../assets/img2.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
+              <img src="../../assets/img2.jpg" class="d-block w-100" alt="..." />
             </div>
             <div class="carousel-item">
-              <img
-                src="../../assets/img7.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
+              <img src="../../assets/img7.jpg" class="d-block w-100" alt="..." />
             </div>
           </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="prev"
-          >
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="next"
-          >
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
@@ -159,20 +97,9 @@
     </div>
     <!-- List -->
     <div class="col-9 list-scroll scroll-height">
-      <div
-        class="row mx-3"
-        *ngIf="appartmentList | appartmentList : searchText as List"
-      >
-        <div
-          class="card px-2 mx-2 m-2 fixed-card"
-          style="width: 250px"
-          *ngFor="let data of List; let i = index"
-        >
-          <img
-            [src]="data.img"
-            class="card-img-top"
-            style="height: 150px; width: 230px"
-          />
+      <div class="row mx-3" *ngIf="appartmentList | appartmentList : searchText as List">
+        <div class="card px-2 mx-2 m-2 fixed-card" style="width: 250px" *ngFor="let data of List; let i = index">
+          <img [src]="data.img" class="card-img-top" style="height: 150px; width: 230px" />
           <div class="card-header">
             <h4>{{ data.name }}</h4>
           </div>
@@ -181,17 +108,10 @@
           </div>
           <div class="card-footer">
             <div class="btn-wrapper text-center d-flex justify-content-between">
-              <a
-                class="btn btn-secondary textsize btn-sm text-white d-flex align-items-center"
-                (click)="viewClick(data)"
-                >View Details</a
-              >
-              <a
-                class="btn btn-warning textsize"
-                *ngIf="!data.markAsFavorite"
-                (click)="favoriteClicked(data, i)"
-                >Mark as Favorite</a
-              >
+              <a class="btn btn-secondary textsize btn-sm text-white d-flex align-items-center"
+                (click)="viewClick(data)">View Details</a>
+              <a class="btn btn-warning textsize" *ngIf="!data.markAsFavorite" (click)="favoriteClicked(data, i)">Mark
+                as Favorite</a>
             </div>
           </div>
         </div>
@@ -208,34 +128,17 @@
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="staticBackdropLabel">Comments</h1>
-        <button
-          type="button"
-          class="btn-close"
-          aria-label="Close"
-          (click)="closePopup()"
-        ></button>
+        <button type="button" class="btn-close" aria-label="Close" (click)="closePopup()"></button>
       </div>
       <div class="modal-body">
         <div class="form-group">
           <label for="comment">Comment:</label>
           <div *ngFor="let data of selectedCardData?.viewDetails" class="pb-3">
-            <textarea
-              class="form-control"
-              disabled
-              readonly
-              [value]="data.comment"
-              rows="3"
-              id="comment"
-            ></textarea>
+            <textarea class="form-control" disabled readonly [value]="data.comment" rows="3" id="comment"></textarea>
           </div>
           <div class="form-group" [formGroup]="commentFormGroup">
             <label for="description">Leave a Comment</label>
-            <textarea
-              id="description"
-              formControlName="comment"
-              class="form-control"
-              maxlength="1400"
-            ></textarea>
+            <textarea id="description" formControlName="comment" class="form-control" maxlength="1400"></textarea>
           </div>
         </div>
       </div>
@@ -256,12 +159,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="staticBackdropLabel">Confirmation</h1>
-        <button
-          type="button"
-          class="btn-close"
-          aria-label="Close"
-          (click)="favClosePopup()"
-        ></button>
+        <button type="button" class="btn-close" aria-label="Close" (click)="favClosePopup()"></button>
       </div>
       <div class="modal-body">
         <h4>
@@ -274,11 +172,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button
-          type="button"
-          class="btn btn-secondary"
-          (click)="favNoClicked()"
-        >
+        <button type="button" class="btn btn-secondary" (click)="favNoClicked()">
           No
         </button>
         <button type="button" class="btn btn-primary" (click)="favYesClicked()">
